content/boundary/v0.13.x/content/docs/commands/session-recordings/list.mdx
---
layout: docs
page_title: session-recordings list - Command
description: |-
  The "session-recordings list" command lists the session recordings within a given scope or resource.
# START AUTO GENERATED METADATA, DO NOT EDIT
created_at: 2025-10-29T10:56:20-04:00
last_modified: 2025-10-29T10:56:20-04:00
# END AUTO GENERATED METADATA
---

# session-recordings list

Command: `boundary session-recordings list`

The `boundary session-recordings list` command lets you list the Boundary session recordings within a given scope or resource.

## Example

This example lists all session recordings within the scope `s_1234567890`.
The `recursive` option means Boundary runs the operation recursively on any child scopes, if applicable:

```shell-session
$ boundary session-recordings list -scope-id s_1234567890 -recursive
```

## Usage

<CodeBlockConfig hideClipboard>

```shell-session
$ boundary session-recordings list [options] [args]
```

</CodeBlockConfig>

### Command options

- `recursive` - If set, runs the list operation recursively on any child scopes, if the type supports it.
The default value is `false`.
- `scope-id=<string>` - The scope from which you want to list the session recordings.
The default value is `global`.
You can also specify this value using the **BOUNDARY_SCOPE_ID** environment variable.

@include 'cmd-option-note.mdx'